[tool.poetry]
name = "vital"
version = "0.0.1"
description = "Volatility Intervention and Trade Analysis Layer (VITAL)"
authors = ["syntaxsdev <info@syntaxs.io>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
